// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OverlayTrigger > Matches the closed snapshot 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="sc-kLhKbu ikZkRM aje-btn aje-btn--primary is-auto"
    type="button"
  >
    Trigger
  </button>
</DocumentFragment>
`;

exports[`OverlayTrigger > Matches the open snapshot 1`] = `
<DocumentFragment>
  <button
    aria-controls="react-aria-:r1:"
    aria-expanded="true"
    class="sc-kLhKbu ikZkRM aje-btn aje-btn--primary is-auto"
    data-focus-visible="true"
    data-pressed="true"
    type="button"
  >
    Trigger
  </button>
</DocumentFragment>
`;
